--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edgeking810/create-next-app",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "A simple next app with React and Tailwind.",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://repo.kinesis.games/react/next-template"
+    "url": "https://github.com/EdgeKing810/next-template"
   },
   "scripts": {
     "dev": "next",
@@ -16,7 +16,7 @@
     "start": "next start"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kishan Takoordyal <kihan@kinesis.games> (https://hub.kinesis.games)",
   "license": "MIT",
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
@@ -26,5 +26,6 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^1.9.6"
-  }
+  },
+  "devDependencies": {}
 }
